namespace glytics.Common.Models.Applications
{
    public class SearchResult
    {
        public string Title { get; set; }
        public string Location { get; set; }
    }
}